# RewardsPilotOS

./: .dockerignore  .env.example  .gitignore  BUILD_SPEC.md  Dockerfile  LICENSE  MASTER_SPEC.md  README.md  SPRINT_HANDOFF.md  pyproject.toml
.github/workflows/: crawl.yml  smoke.yml
agents/: registry.py
agents/graph/: behavior.py
agents/knowledge/: behavior.py
agents/memory/: behavior.py
agents/planner/: empty_portfolio.py  planner.py  portfolio_args.py
agents/prompts/: planner.md  recommender.md
agents/recommendation/: calibration.py  margin.py  recommender.py
agents/state/: schema.py
agents/workflows/: demo.py  graph.py
backend/: main.py
backend/api/: auth.py  chat.py  health.py  knowledge.py  portfolio.py  preferences.py  responses.py
backend/application/: chat.py  errors.py  goals.py  knowledge.py  portfolio.py  preferences.py  recommendations.py  users.py
backend/auth/: dependencies.py  tokens.py
backend/config/: settings.py
backend/middleware/: auth.py  request_context.py
backend/models/: __init__.py  base.py  graph.py  identity.py  intelligence.py  knowledge.py  portfolio.py  rewards.py
backend/schemas/: chat.py  identity.py  portfolio.py
contracts/api/: envelope.py  recommendation.py  verified_value.py
contracts/mcp/: README.md  base.py
contracts/tools/: graph_engine.py  memory.py  (+5 more)
docs/: DEPLOY_STATUS.md  KNOWN_LIMITATIONS.md  VERIFICATION_QUEUE.md
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
mcp/: registry.py
tests/: conftest.py
tools/: registry.py
(+197 files in other folders)
