[project]
name = "rewardspilotos"
version = "0.1.0"
description = "RewardsPilotOS — AI copilot for credit card rewards optimization. No fabricated data: unknown is always preferred over incorrect."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "fastapi>=0.111",
    "langgraph>=0.2",
    "google-genai>=1.0",
    "networkx>=3.3",
    "chromadb>=0.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
]

[tool.setuptools]
packages = { find = { include = [
    "agents*", "tools*", "mcp*", "knowledge*", "graph*", "rules*",
    "memory*", "database*", "evaluation*", "contracts*", "backend*", "infra*",
] } }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
